[package]
name = "optical-flow-lk"
version = "0.2.0"
edition = "2024"
authors = ["den59k <den59k@gmail.com>"]
description = "Rust implementation of Lucas-Kanade optical flow and Shi-Tomasi feature detection"
license = "MIT"
repository = "https://github.com/den59k/lucas-shi-rust"
documentation = "https://docs.rs/optical-flow-lk"
keywords = ["optical-flow", "tracking", "computer-vision", "feature-detection", "visual-odometry"]
categories = ["computer-vision", "algorithms", "science"]

[dependencies]
image = "0.25.10"
nalgebra = "0.34.1"

[dev-dependencies]
imageproc = "0.26.1"

[[bench]]
name = "gradients"
harness = false

[[bench]]
name = "lk"
harness = false
